--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -69,3 +69,10 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+fos_user:
+    db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
+    firewall_name: main
+    user_class: RestoBundle\Entity\Resto
+    from_email:
+        address: "%mailer_user%"
+        sender_name: "%mailer_user%"
