--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,7 +1,11 @@
 # To get started with security, check out the documentation:
 # https://symfony.com/doc/current/security.html
 security:
-
+    encoders:
+        FOS\UserBundle\Model\UserInterface: plaintext
+    providers:
+        fos_userbundle:
+            id: fos_user.user_provider.username
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
         in_memory:
