--- a/src/RestoBundle/Resources/config/routing.yml
+++ b/src/RestoBundle/Resources/config/routing.yml
@@ -1,5 +1,3 @@
-
-
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
 
@@ -25,3 +23,7 @@ AcceuilNonConnecté:
 ListMenu:
     path:     /Menu
     defaults: { _controller: RestoBundle:Client:ListMenu }
+
+ajouterplat:
+    path:     /ajplat
+    defaults: { _controller: RestoBundle:Ajmenu:addmenu }
