--- a/src/RestoBundle/Resources/config/routing.yml
+++ b/src/RestoBundle/Resources/config/routing.yml
@@ -1,9 +1,7 @@
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
 
-fos_user_profile:
-    resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
-    prefix: /profile
+
 
 fos_user_register:
     resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
@@ -27,3 +25,26 @@ ListMenu:
 ajouterplat:
     path:     /ajplat
     defaults: { _controller: RestoBundle:Ajmenu:addmenu }
+
+ajoutersingleplat:
+    path:     /ajsingplat
+    defaults: { _controller: RestoBundle:Ajmenu:addsinglemenu }
+removeplat:
+    path:     /rm
+    defaults: { _controller: RestoBundle:Ajmenu:remouvemenu }
+
+updateplat:
+    path:     /updplat
+    defaults: { _controller: RestoBundle:Ajmenu:updatemenu }
+
+profile:
+    path:     /prof
+    defaults: { _controller: RestoBundle:Profil:DisplayProfile }
+
+updateinfogenerale:
+    path:     /upinfgen
+    defaults: { _controller: RestoBundle:Profil:UpdateInformGeneraleProfile }
+
+UpdateConfidProfile:
+    path:     /updateconf
+    defaults: { _controller: RestoBundle:Profil:UpdateConfidProfile }
